--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }
 anyhow = "1.0"
 thiserror = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
 
 [profile.release]
 panic = "abort"
