--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ anyhow = "1.0"
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
+once_cell = "1.19"
+solana_rbpf = { version = "0.8.2", features = ["debugger"] }
 
 [profile.release]
 panic = "abort"
