--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "zisk_solana_prover"
 version = "0.1.0"
 edition = "2021"
+default-run = "zisk_solana_prover"
 
 [dependencies]
 ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }
@@ -13,8 +14,15 @@ sha2 = "0.10.8"
 hex = "0.4.3"
 serde_json = "1.0"
 once_cell = "1.19.0"
-solana_rbpf = "0.4.0"
 rand = "0.8"
+chrono = { version = "0.4", features = ["serde"] }
+lazy_static = "1.4"
+
+
+
+[[bin]]
+name = "zisk_solana_prover"
+path = "src/main.rs"
 
 [[bin]]
 name = "generate_input"
@@ -35,6 +43,10 @@ path = "src/bin/test_mathematical_proof.rs"
 [[bin]]
 name = "test_cpi"
 path = "src/bin/test_cpi.rs"
+
+[[bin]]
+name = "run_bpf_executor"
+path = "src/bin/run_bpf_executor.rs"
 
 [[bin]]
 name = "bpf_prover_tests"
